<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/giant_spacing_48">

    <EditText
        android:id="@+id/name_user_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg_edt_field"
        android:elevation="3dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="@dimen/normal_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname_user_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/giant_spacing_48"
        android:background="@drawable/custom_bg_edt_field"
        android:elevation="3dp"
        android:hint="@string/surname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="@dimen/normal_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_user_edt" />

    <EditText
        android:id="@+id/email_user_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/giant_spacing_48"
        android:background="@drawable/custom_bg_edt_field"
        android:elevation="3dp"
        android:hint="@string/email_user"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/normal_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_user_edt" />

    <EditText
        android:id="@+id/password_user_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/giant_spacing_48"
        android:background="@drawable/custom_bg_edt_field"
        android:elevation="3dp"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="@dimen/normal_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_user_edt" />

    <EditText
        android:id="@+id/confirm_password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/giant_spacing_48"
        android:background="@drawable/custom_bg_edt_field"
        android:elevation="3dp"
        android:hint="@string/login_confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="@dimen/normal_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_user_edt" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/giant_spacing_48"
        android:backgroundTint="@color/purple_200"
        android:paddingStart="@dimen/big_spacing_32"
        android:paddingEnd="@dimen/big_spacing_32"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_edt" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>